# bea-rs

./: .bears.yml  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.bears/: 0451-add-readme-badges-ci-crates-io-release-license.md  05fd-prefix-id-add-resolve-prefix-to-store.md  0e02-preserve-frontmatter-parse-error-details-in-load-one.md  1629-tui-task-detail-view.md  27y-cli-show-plan-for-epic-execution-order.md  2j2-tui-app-shell-event-loop-and-terminal-setup.md  3170-tui-keyboard-actions-and-filtering.md  3wz-action-edit-task-in-editor.md  3z9-test-file-watcher-reload-behaviour.md  4ec7-create-github-actions-release-workflow.md  54t-add-bea-epics-cli-command-with-progress-display.md  551d-prefix-id-integration-tests.md  57a2-harden-frontmatter-delimiter-parsing-for-edge-cases.md  5b56-consolidate-common-task-filtering-and-sorting-helpers.md  5e5b-tui-task-list-view.md  5h8-add-notify-crate-and-set-up-directory-watcher.md  5hd-wire-up-bea-tui-cli-command.md  5kx-refresh-claude-md-architecture-section-to-match-current-code.md  5px-update-store-to-handle-type-field.md  6041-create-agents-md-for-the-repository.md  612b-replace-shell-based-edit-launch-with-safe-argv-execution.md  6133-centralize-task-summary-detail-projection-models.md  622-mcp-epic-support-in-tools.md  67b4-support-task-comments.md  6ax-archive-and-log.md  6c44-add-regression-tests-for-review-driven-fixes.md  6d54-increase-task-id-length-or-make-it-adaptive.md  6ra-tests-for-archive-feature.md  7f2-compact-tui-dependency-subtask-rendering-so-the-body-is-reachable.md  7k7-keyboard-navigation-j-k-tab-esc-quit.md  7uv-markdown-rendering-in-tui.md  8350-dim-blocked-task-titles-in-graph-output.md  878c-create-homebrew-formula.md  88c-keep-tui-running-on-recoverable-action-errors.md  890a-test-task-for-mcp-integration-verification.md  9649-inherited-effective-priority-from-dependents.md  96h-integrate-markdown-rendering-into-tui-detail-panel.md  98y-right-panel-detail-view-with-frontmatter-and-body.md  9fcf-prefix-id-wire-into-cli-and-mcp-commands.md  9ra-service-archive-and-list-archive-operations.md  (+54 more)
.github/: copilot-instructions.md
.tasks/: 017a-tui-scaffold-app-and-event-loop.md  05fd-prefix-id-add-resolve-prefix-to-store.md  0e02-preserve-frontmatter-parse-error-details-in-load-one.md  1883-add-cancel-and-prune-commands.md  22b4-make-dependency-tree-traversal-cycle-safe.md  35cd-add-color-output-to-cli.md  482d-extract-shared-app-service-used-by-cli-and-mcp.md  551d-prefix-id-integration-tests.md  5acc-add-import-export-commands.md  5c28-add-shell-completions.md  5dcc-add-release-workflow-triggered-by-git-tags.md  612b-replace-shell-based-edit-launch-with-safe-argv-execution.md  6c44-add-regression-tests-for-review-driven-fixes.md  7895-add-debug-logging-to-mcp-server.md  78b3-publish-releases-to-crates-io.md  7a7e-add-changelog-and-version-bump-process.md  7af8-create-project-config-file-bears-yml-via-init.md  8413-add-bea-version-command.md  878c-create-homebrew-formula.md  (+17 more)
(+107 files in other folders)
