[package]
name = "bea-rs"
version = "0.4.0"
edition = "2024"
description = "A file-based task tracker CLI and MCP server for AI agent workflows"
license = "MIT"
repository = "https://github.com/LHelge/bea-rs"
keywords = ["task", "cli", "mcp", "agent"]
categories = ["command-line-utilities"]

[[bin]]
name = "bea"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
rand = "0.10.0"
rmcp = { version = "1.2.0", features = ["server", "macros", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3.27.0"
