[package]
name = "bea-rs"
version = "0.7.0"
edition = "2024"
description = "A file-based task tracker CLI and MCP server for AI agent workflows"
license = "MIT"
repository = "https://github.com/LHelge/bea-rs"
keywords = ["task", "cli", "mcp", "agent"]
categories = ["command-line-utilities"]
include = [
    "src/**",
    "templates/**",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
]

[[bin]]
name = "bea"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.5"
crossterm = "0.29.0"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
rand = "0.10.1"
ratatui = "0.30.1"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.13"
shell-words = "1.1.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "macros", "rt-multi-thread"] }
tui-markdown = "0.3.7"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
rmcp = { version = "1.7.0", features = ["client", "transport-child-process"] }
tempfile = "3.27.0"
